Added drawer nav without fun'ty

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.TinkoffLeague.NoActionBar">
         <activity
-            android:name=".presentation.activities.MenuActivity"
-            android:exported="true" />
+            android:name=".presentation.activities.NavigationActivity"
+            android:exported="true"
+            />
         <activity
             android:name=".presentation.activities.MainActivity"
             android:exported="true">
