--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     //Serialization
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0'
 
+    //Coroutines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1")
+
     //Room
     implementation("androidx.room:room-runtime:2.3.0")
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
